2001-06-05  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INIT_PARSE_ARGS): `prefix' and `exec_prefix'
	can be empty.
	`*dir' variables cannot be NONE.
	Reported by Mark Kettenis.

2001-06-05  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi: Fix references to Solaris and SunOS versions.

2001-06-04  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_VAR_SET, AC_VAR_GET, AC_VAR_TEST_SET)
	(AC_VAR_SET_IFELSE, AC_VAR_PUSHDEF and AC_VAR_POPDEF, AC_TR_CPP)
	(AC_TR_SH): Move as...
	* m4sh.m4 (AS_VAR_SET, AS_VAR_GET, AS_VAR_TEST_SET)
	(AS_VAR_SET_IF, AC_VAR_PUSHDEF, AS_VAR_POPDEF, AS_TR_CPP)
	(AS_TR_SH): these.
	(_AS_TR_PREPARE, _AS_CR_PREPARE, _AS_TR_CPP_PREPARE)
	(_AS_TR_SH_PREPARE): New.
	(AS_SHELL_SANITIZE): Invoke _AS_TR_PREPARE.
	* tests/aclocal.m4 (AC_STATE_SAVE): `as_' vars can be modified.

2001-06-02  Akim Demaille  <akim@epita.fr>

	* Makefile.am (.m4.m4f): Pass the options first.
	Fixes PR autoconf/182.

2001-06-02  Nathan Sidwell  <nathan@codesourcery.com>

	GNU getopt, when POSIXLY_CORRECT does not permute options and
	arguments.  So pass the options first.
	Fixes PR autoconf/184.

	* autoconf.sh (m4_prefiles, m4f_prefiles): New variables.
	(run_m4): Remove files.
	(run_m4f): Remove.
	Update remainder of script to use them.
	(for warning in): Do not use a literal comma as it will not be
	split by IFS.

2001-06-02  Christian Marquardt  <marq@gfz-potsdam.de>

	* aclang.m4 (AC_PROG_F77): Add Fujitsu's "frt" to the list of
	Fortran compilers to check.
	(_AC_PROG_F77_V): Add '-###' as a possible option to print
	information on library and object files.
	(AC_PROG_CXX): Add Fujitsu's "FCC" to the list of C++ compilers
	to check.

2001-06-02  Akim Demaille  <akim@epita.fr>

	* autom4te.in (Request::@request): Declare with `vars', not `my',
	as it prevents updates via `do FILENAME'.

2001-06-02  Akim Demaille  <akim@epita.fr>

	* configure.in (standards_texi): Remove, dead code.

2001-06-02  Akim Demaille  <akim@epita.fr>

	* autom4te.in: New.
